<resources>
    <string name="app_name">Smart Table Indicator</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="table_number">Table %1$d</string>
    <string name="table_icon_desc">Table status icon</string>
    <string name="table_1">Table 1</string>
    <string name="header_title">Smart Table Dashboard</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="staff_name">Staff Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_title">Staff Login</string>
    <string name="login_staff_id_hint">Staff ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="help_title">About Smart Table Indicator</string>
    <string name="help_description">This application is part of a thesis project designed to monitor and manage table statuses in a self-serve restaurant environment using ESP32-based indicators and Firebase.</string>
    <string name="developed_by">Developed by:</string>
    <string name="developer_name">Vanya Alzenaya Agam</string>
    <string name="thesis_title">Thesis Title:</string>
    <string name="thesis_title_long">Rancang Bangun Smart Table Status Indicator Berbasis ESP32 untuk Efisiensi Manajemen Meja pada Restoran Self-Serve</string>
    <string name="app_version">App Version:</string>
    <string name="app_version_value">1.0.0 (Prototype)</string>
    <string name="copyright_notice">© 2025 Vanya Alzenaya Agam. Universitas Gunadarma.</string>
    <string name="app_settings">App Settings</string>
    <string name="firebase_project_id">Firebase Project ID:</string>
    <string name="loading">Loading...</string>
    <string name="test_firebase_connection">Test Firebase Connection</string>
    <string name="app_theme">App Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system_default">Follow System (Default)</string>
    <string name="default_notification_channel_id" translatable="false">table_status_default_channel</string>
</resources>