<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard"
            android:icon="@drawable/ic_dashboard" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/menu_statistics"
            android:icon="@drawable/ic_bar_chart" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout" />
</menu>